Finished view engine and integrated it in the MVC Framework

--- a/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/SIS.MvcFramework.Tests/SIS.MvcFramework.Tests.csproj
+++ b/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/SIS.MvcFramework.Tests/SIS.MvcFramework.Tests.csproj
@@ -28,7 +28,7 @@
     <None Update="TestViews\ViewWithNoCode.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestViews\ViewWithNoCode.Reult.html">
+    <None Update="TestViews\ViewWithNoCode.Result.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="TestViews\WorkWithViewModel.html">
