--- a/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/Apps/CakesWebApp/CakesWebApp.csproj
+++ b/C# Web Devolpment Basic-May2018/08.MVC FRAMEWORK - ADVANCED - IOC, DATA BINDING/SIS-Lab/Apps/CakesWebApp/CakesWebApp.csproj
@@ -21,6 +21,9 @@
     <None Update="Views\OrderById.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Views\OrdersList.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Views\Profile.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
